test/expected/declare_rtf_v-c.out
declare f as restricted function
        ^
9: error: "restricted" functions are not supported in C
